--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,11 @@ p {
 }
 /*   layout page styles    */
 .navigation{ 
-    width:100%  !important;
+    width:130%  !important;
    height: 40px !important;
+   margin-top: -14px !important;
+    margin-bottom: -26px !important;
+    margin-right: -5px !important;
    
  } 
  .mainLayer{
@@ -142,6 +145,13 @@ p {
     font-weight: 500;
     font-size: x-large;
     color: white;
+    text-decoration: none !important;
+    
+ }
+ .header:hover, .header:focus{ 
+
+    text-decoration: none !important;
+    color: white !important;
     
  }
  .rightMenu{ 
@@ -311,39 +321,7 @@ p {
 	column-gap: 40px;
 	column-fill: auto;
 }
-.pin {
 
-	display: inline-block;
-	background: #FEFEFE;
-	border: 2px solid #FAFAFA;
-	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-	margin: 0 2px 15px;
-	-webkit-column-break-inside: avoid;
-	-moz-column-break-inside: avoid;
-	column-break-inside: avoid;
-	padding: 15px;
-	padding-bottom: 5px;
-	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
-	opacity: 1;
-	
-	-webkit-transition: all .2s ease;
-	-moz-transition: all .2s ease;
-	-o-transition: all .2s ease;
-	transition: all .2s ease;
-}
-
-.pin img {
-	width: 100%;
-	border-bottom: 1px solid #ccc;
-	padding-bottom: 15px;
-	margin-bottom: 5px;
-}
-
-.pin p {
-	font: 12px/18px Arial, sans-serif;
-	color: #333;
-	margin: 0;
-}
 
 @media (min-width: 960px) {
 	#columns {
@@ -415,4 +393,90 @@ p {
     font-weight: 100px;
     color:lightslategray;
     margin: 0 10px 0px 10px; 
+}
+
+/*detail view @page*/
+
+.detail .detail_cover {
+
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .1);
+    background: url("../images/cover.webp") no-repeat center top;
+    margin-top: -10px;
+    padding-top: 20px;
+    text-align: center;
+    background-attachment: fixed;
+    background-position: center center;
+    min-height: 500px;
+    width: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+   
+}
+
+.detail .cover_row{
+    padding:0px 0px 0px 0px !important;
+    margin: -2px;
+}
+.detail .menu{
+    width:80%;
+    margin:0px 10% 0px 10% !important;
+}
+.detail .menu .item{
+    font-size: 18px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    color: dimgray;    
+
+}
+
+.overview .title{
+    font-size: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+    color: #333;
+     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    line-height: 100%;
+}
+
+.overview .place{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: 100px;
+    color:grey;
+}
+.overview .place_column{
+    padding:0px 0px 0px 0px !important;
+}
+.overview .rv{
+    margin-left: 5px;
+}
+.overview .gaptitle{
+   padding:5px 0px 0px 0px !important;
+}
+.overview .avatarimg{
+    margin-top:40px !important;
+}
+.overview .avatarname{
+    margin-top:5px !important;
+}
+.overview .avatarcolumn{
+    width:100%;
+    text-align: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:grey;
+    font-size: 16px;
+}
+.overview .typeIcons{
+    margin-left: 10%;
+    width:50% !important;
+    text-align: center;
 }
