--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,12 +7,14 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
+    <script src="{% static 'js/semanticCustomjs.js' %}"></script>
+    {% block head %}{% endblock %}
 </head>
 <body>
     <div class="ui grid mainLayer">
         <div class="row gridrow">
-            <div class="ui violet inverted secondary top fixed navigation menu">
-                <div class="header">stayways</div>
+            <div class="ui violet inverted secondary  navigation menu">
+                <a href="{% url 'main:index' %}" class="header"><div>stayways</div></a>
                 <div class="right menu rightMenu">
                     <a class="item menuItem"><i aria-hidden="true" class="empty heart inverted icon"></i></a>
                     <a class="item menuItem"><i aria-hidden="true" class="mail outline inverted icon"></i></a>
@@ -22,9 +24,10 @@
                 </div>
             </div>   
         </div>
+        </div>
     {% block content %}
     {% endblock %}
-    </div>
+    
     
     <script src="{% static 'js/semantic.min.js' %}"></script>
     <script src="{% static 'js/script.js' %}"></script>
