--- a/templates/roomlistview.html
+++ b/templates/roomlistview.html
@@ -137,12 +137,8 @@
                                                         <div class="ui grid">
                                                             <div class="row marginSecRow">
                                                                 <div class="left aligned column">
-                                                                    <div class="ui star rating" data-rating="{{ room.avg }}" role="radiogroup">
-                                                                                <i class="icon active"></i>
-                                                                                <i class="icon active"></i>
-                                                                                <i class="icon"></i>
-                                                                                <i class="icon"></i>
-                                                                                <i class="icon"></i>
+                                                                    <div class="ui star rating" data-rating="3" role="radiogroup">
+                                                                                
                                                                     </div>
                                                                     <span class="review">2 reviews</span>
                                                                 </div>
