--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,6 @@ p {
     background-attachment: fixed;
     background-position: center center;
     min-height: 500px;
-    max-height: 500px;
     width: 100%;
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
@@ -713,7 +712,7 @@ p {
   transition: all 0.5s ease-in-out;
 }
 
-.content {
+.ovcontent {
   white-space: nowrap; 
   color: white;
   font-size: 20px;
@@ -730,7 +729,7 @@ p {
 
 }
 
-.content a {
+.ovcontent a {
   font-size: 18px;
   color: #333;
   height: 50px;
@@ -745,23 +744,23 @@ p {
   transition: all 0.2s ease-in-out;
 }
 
-.content .expand {
+.ovcontent .expand {
   margin-top: -500px;
   margin-left: -500px;
    -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
 }
 
-.view-tenth:hover .content .expand {
+.view-tenth:hover .ovcontent .expand {
   margin-top: 0;
   margin-left:0;
 }
-.content a:hover{
+.ovcontent a:hover{
     background-color: #6435C9;
     color: white;
     opacity: 5.5;
 }
-.content .icon{
+.ovcontent .icon{
     margin-left:7px;
     margin-top:-2px;
 }
