--- a/templates/detail.html
+++ b/templates/detail.html
@@ -402,7 +402,7 @@
                         <div class="column view-tenth">
                             <img src="/media/mountains.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/mountains.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -416,7 +416,7 @@
                         <div class="column view-tenth">
                             <img src="/media/adStayways.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/adStayways.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -430,7 +430,7 @@
                         <div class="column view-tenth">
                             <img src="/media/room.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/room.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -444,7 +444,7 @@
                         <div class="column view-tenth">
                             <img src="/media/mountains.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/mountains.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -458,7 +458,7 @@
                         <div class="column view-tenth">
                             <img src="/media/adStayways.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/adStayways.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -472,7 +472,7 @@
                         <div class="column view-tenth">
                             <img src="/media/room.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/room.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -486,7 +486,7 @@
                         <div class="column view-tenth">
                             <img src="/media/mountains.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/mountains.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -500,7 +500,7 @@
                         <div class="column view-tenth">
                             <img src="/media/room.jpg"/>
                             <div class="overlay">
-                                <div class="content">
+                                <div class="ovcontent">
                                     <span class="expand">
                                         <a href="/media/room.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
