--- a/templates/detail.html
+++ b/templates/detail.html
@@ -31,7 +31,6 @@
                     <div class="nine wide column" style="margin-left: -20px;">
                         <div class="ui grid" style="width: 100%;margin: 0px;">
         <!-- overview -->  
-        
                             <div class="row overview" >
                                 <div class="eleven wide column">
                                     <div class="ui grid">
@@ -402,7 +401,7 @@
                         <div class="column view-tenth">
                             <img src="/media/mountains.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/mountains.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -416,7 +415,7 @@
                         <div class="column view-tenth">
                             <img src="/media/adStayways.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/adStayways.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -430,7 +429,7 @@
                         <div class="column view-tenth">
                             <img src="/media/room.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/room.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -444,7 +443,7 @@
                         <div class="column view-tenth">
                             <img src="/media/mountains.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/mountains.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -458,7 +457,7 @@
                         <div class="column view-tenth">
                             <img src="/media/adStayways.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/adStayways.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -472,7 +471,7 @@
                         <div class="column view-tenth">
                             <img src="/media/room.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/room.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -486,7 +485,7 @@
                         <div class="column view-tenth">
                             <img src="/media/mountains.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/mountains.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
@@ -500,7 +499,7 @@
                         <div class="column view-tenth">
                             <img src="/media/room.jpg"/>
                             <div class="overlay">
-                                <div class="ovcontent">
+                                <div class="ovlycontent">
                                     <span class="expand">
                                         <a href="/media/room.jpg" data-lightbox="portfolio">
                                             <i class=" large zoom icon"></i>
